# TriWild

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: continuous.yml
cmake/: FindGMP.cmake  FindGMPTriWild.cmake  FindLIBIGL.cmake  TriWildDownloadExternal.cmake  geogram.cmake
python/: DeterminantChecker.py
src/: main.cpp
src/triwild/: AMIPS.cpp  AMIPS.h  Args.cpp  Args.h  CurvedTriUntangler.cpp  CurvedTriUntangler.hpp  Curves.cpp  Curves.h  FeatureElements.cpp  FeatureElements.h  Logger.h  Point_2.h  Point_2f.h  TrimeshElements.h  auto_det_checker.cpp  auto_det_checker.hpp  auto_p_bases.cpp  auto_p_bases.hpp  do_triwild.cpp  do_triwild.h  edge_collapsing.cpp  edge_collapsing.h  edge_splitting.cpp  edge_splitting.h  edge_swapping.cpp  edge_swapping.h  feature.cpp  feature.h  feature_preprocessing.cpp  feature_preprocessing.h  meshio.cpp  meshio.hpp  optimization.cpp  optimization.h  reference_triangle.cpp  reference_triangle.h  reference_triangle_faces.txt  reference_triangle_vertices.txt  triangulation.cpp  triangulation.h  (+2 more)
